welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: ')' expected but '[' found.
	if ( a in [10,20] && b>20 || a in [10,20] && b<10 || b in [10,20] && a>20 || b in [10,20] && a<10){
                  ^in1020:8: error: illegal start of simple expression
}
^