welcome.lessons.welcome.bat.bool1.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
	if ( a in [10,20] && b>20 || a in [10,20] && b<10 || b in [10,20] && a>20 || b in [10,20] && a<10){
		return true
	}else{ 
		return false
	}

}
